--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <div id="app">vite-library-template</div>
+    <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
